//
//
// meta_node.proto
// Copyright (C) 2022 rtstore.io Author imotai <codego.me@gmail.com>
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//    http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";

import "rtstore_base.proto";

package rtstore_memory_proto;

message AssignPartitionRequest {
    // the id list for partitions
    repeated int32 partition_ids = 1;
    rtstore_base_proto.RTStoreTableDesc table_desc = 2;
    rtstore_base_proto.StorageBackendConfig config = 4;
}

message AssignPartitionResponse {}
message AppendRecordsRequest {
    string table_id = 1;
    int32 partition_id = 2;
    bytes records = 3;
    string db = 4;
}

message AppendRecordsResponse {}

message FetchPartitionRequest {
    string table_id = 1;
    string db = 2;
    int32 partition_id = 3;
}

// The rtstore memory node server definition.
service MemoryNode {
    // method for assign partitions to memory node
    rpc AssignPartition (AssignPartitionRequest) returns (AssignPartitionResponse) {}
    // method for append records to cell store
    rpc AppendRecords(AppendRecordsRequest) returns (AppendRecordsResponse) {}
    // fetch partition
    rpc FetchPartition(FetchPartitionRequest) returns (stream rtstore_base_proto.FlightData) {}
}
